Agentforce/force-app/main/default/objects/Continuous_Improvement__c/Continuous_Improvement__c.object-meta.xml
<CustomObject>
    <description>AD-379 - Create Continuous Improvement object</description>
    <label>Continuous Improvement</label>
    <nameField>
        <label>Continuous Improvement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Continuous Improvements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>