Agentforce/force-app/main/default/objects/Continuous_Improvement__c/fields/Bid__c.field-meta.xml
<CustomField>
    <fullName>Bid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bid</label>
    <referenceTo>Bid__c</referenceTo>
    <relationshipLabel>Continuous Improvements</relationshipLabel>
    <relationshipName>Continuous_Improvements</relationshipName>
    <type>Lookup</type>
</CustomField>