Agentforce/force-app/main/default/objects/Continuous_Improvement__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-379 - Denotes the Contract that this continuous improvement record is for</description>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Continuous Improvements</relationshipLabel>
    <relationshipName>Continuous_Improvements</relationshipName>
    <type>Lookup</type>
</CustomField>