Agentforce/force-app/main/default/objects/Continuous_Improvement__c/fields/Due_By__c.field-meta.xml
<CustomField>
    <fullName>Due_By__c</fullName>
    <label>Due By</label>
    <type>Date</type>
</CustomField>