Agentforce/force-app/main/default/objects/Continuous_Improvement__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AD-379 - Denotes the Opportunity that this Continuous Improvement record relates to</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Continuous Improvements</relationshipLabel>
    <relationshipName>Continuous_Improvements</relationshipName>
    <type>Lookup</type>
</CustomField>