Agentforce/force-app/main/default/objects/Continuous_Improvement__c/recordTypes/Debrief.recordType-meta.xml
<RecordType>
    <fullName>Debrief</fullName>
    <active>true</active>
    <label>Debrief</label>
</RecordType>